<resources>
    <string name="app_name">Ath Tech Course</string>
    <string name="developer_name">Pigadas Vassilis</string>
    <string name="login_to_our_service">Login to our Service:</string>
    <string name="please_enter_your_email">Please enter your email...</string>
    <string name="please_enter_your_password">Please enter your password...</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_storage">StorageActivity</string>

</resources>