<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:padding="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padd_16"
        android:paddingBottom="@dimen/padd_16"
        android:text="@string/login_to_our_service"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:hint="@string/please_enter_your_email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:hint="@string/please_enter_your_password" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="#e6e6e6"
        android:paddingLeft="@dimen/padd_32"
        android:paddingRight="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:text="@string/button_cancel"
        android:textColor="#333333" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:rippleColor="@color/lightblue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancel"
        app:layout_constraintBottom_toBottomOf="@id/cancel"
        android:text="@string/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>