<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padd_16"
        android:paddingBottom="@dimen/padd_16"
        android:text="@string/login_to_our_service"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="32dp"
        android:hint="@string/please_enter_your_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:hint="@string/please_enter_your_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <include layout="@layout/view_cancel_buton"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/button_login" />
    </LinearLayout>

</LinearLayout>